# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "concoders"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "ankushKun <ankush4singh@gmail.com>" ]
description = "A marketplace smart contract to be used in games for ingame purchases"

[dependencies]
concordium-std = "5.1"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
